weather display added and section layout bugs fixed

--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 80vh;
+  height: 100vh;
 }
 
 #about:after {
@@ -60,7 +60,7 @@
   align-self: flex-start;
   line-height: 2;
   padding: 20px;
-  /* border: 1px solid; */
+ 
   max-width: 100%;
 }
 
