--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,3 @@
-section {
-  height: 80vh;
-  max-height: 80vh;
-}
-
 #home {
   background: linear-gradient(
     135deg,
@@ -18,7 +13,8 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-height: 80vh;
+  height: 100vh;
+  margin-top: -70px;
 }
 
 #home:after {
