--- a/css/projects.css
+++ b/css/projects.css
@@ -12,8 +12,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* overflow: scroll; */
   padding-bottom: 20px;
+  height: 100vh;
 }
 
 #projects > h3 {
